--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -5,9 +5,13 @@
 }
 
 .header {
+  position: fixed;
+  top: 0;
   display: flex;
-  flex-direction: column;
   align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  max-width: 36rem;
 }
 
 .headerImage {
