--- a/styles/utils.module.css
+++ b/styles/utils.module.css
@@ -45,8 +45,17 @@
 
 .listItem {
   margin: 0 0 1.25rem;
+  width: 100%;
 }
 
 .lightText {
   color: #999;
+}
+
+.glass {
+  background: rgba(255, 255, 255, 0.4);
+  border: 1px solid rgba(255, 255, 255, 0.18);
+  border-radius: 10px;
+  backdrop-filter: blur(15px);
+  padding: 1rem;
 }
