--- a/styles/global.scss
+++ b/styles/global.scss
@@ -13,6 +13,9 @@ body {
   top: 0;
   /* height: 100%; */
   overflow: auto;
+  /* background-image: url('../public//images/macground.jpg');
+  background-size: cover;
+  background-repeat: no-repeat; */
   background: radial-gradient(
       circle at 50% 0,
       rgba(255, 0, 0, 0.5),
@@ -51,4 +54,28 @@ img {
 #__next {
   width: 100%;
   height: 100%;
+}
+
+@media (max-width: 1300px) {
+  #nav {
+    width: 80%;
+    height: 70px;
+    flex-direction: row;
+    gap: 30px;
+    overflow-x: scroll;
+    position:relative;
+    align-items: center;
+    padding: 1rem;
+    margin: auto;
+  }
+  #Layout {
+    width: 80%;
+    height: calc(100% - 70px);
+    margin: auto;
+    border
+    main {
+      max-height: none;
+      height: 100%;
+    }
+  }
 }
