배경 변경 / Flame 위치 변경 / mdg 업데이트

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -13,10 +13,9 @@ body {
   top: 0;
   /* height: 100%; */
   overflow: auto;
-  background-color: #000;
-  // background-image: url('../public//images/macground.jpg');
-  // background-size: cover;
-  // background-repeat: no-repeat;
+  background-image: url('../public/images/cyber.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
   // background: radial-gradient(
   //     circle at 50% 0,
   //     rgba(255, 0, 0, 0.5),
