디렉토리 구조 변경 / 네온 페이지 구성중

--- a/styles/Layout.module.scss
+++ b/styles/Layout.module.scss
@@ -8,6 +8,8 @@
   main {
     max-width: 1080px;
     max-height: 70%;
+    min-width: 400px;
+    min-height: 300px;
     overflow-y: scroll;
     z-index: 10;
   }
