--- a/pages/neon/neon.module.scss
+++ b/pages/neon/neon.module.scss
@@ -2,10 +2,7 @@
     // background: #000;
     width: 100%;
     height: 100%;
-    position: absolute;
-    left: 0;
-    top: 0;
-    padding: 1rem;
+    margin-top: 10px;
 }
 .neonInput {
     outline: none;
@@ -24,11 +21,11 @@
         0 0 4px #fff,
         0 0 11px #fff,
         0 0 19px #fff,
-        0 0 40px rgb(231, 110, 237),
-        0 0 80px rgb(231, 110, 237),
-        0 0 90px rgb(231, 110, 237),
-        0 0 100px rgb(231, 110, 237),
-        0 0 150px rgb(231, 110, 237);
+        0 0 40px rgb(128, 244, 163),
+        0 0 80px rgb(128, 244, 163),
+        0 0 90px rgb(128, 244, 163),
+        0 0 100px rgb(128, 244, 163),
+        0 0 150px rgb(128, 244, 163);
     }
     20%, 24%, 55% {       
       text-shadow: none;
