--- a/styles/Layout.module.scss
+++ b/styles/Layout.module.scss
@@ -45,3 +45,11 @@
 .backToHome {
   margin: 3rem 0 0;
 }
+
+@media(max-width: 500px) {
+  .container {
+    main {
+      min-width: 300px;
+    }
+  }
+}
