--- a/styles/navbar.module.scss
+++ b/styles/navbar.module.scss
@@ -52,3 +52,13 @@
         }
     }
 }
+
+@media(max-width: 500px) {
+    .nav {
+        a {
+            span {
+                display: none;
+            }
+        }
+    }
+}
