--- a/styles/navbar.module.scss
+++ b/styles/navbar.module.scss
@@ -1,64 +1,78 @@
+@import "./variables.scss";
+
 .nav {
-    position: fixed;
-    left: 0;
+    position: sticky;
     top: 0;
-    width: 10rem;
-    height: 100%;
+    font-family: InkLipquid;
+    width: 100%;
+    height: 1.5rem;
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    justify-content: center;
+    align-items: flex-end;
     gap: 4rem;
     a {
-        font-size: 1.2rem;
-        color: rgb(27, 10, 67);
-    }
-}
-@media (max-width: 1300px) {
-    @keyframes slowshow {
-        0% {
-            opacity: 0;
-        }
-        100% {
-            opacity: 1;
-        }
-    }
-    .nav {
-        width: 100%;
-        height: 70px;
-        flex-direction: row;
-        overflow-x: scroll;
-        overflow-y: hidden;
-        position:relative;
+        font-size: 1rem;
+        line-height: 1.2rem;
+        display: flex;
         align-items: center;
-        padding: 1rem;
-        gap: 5rem;
-        margin: auto;
-        a {
-            display: flex;
-            align-items: center;
-            span {
-                visibility: hidden;
-                transform: translateY(-1rem);
-                transition: transform 300ms ease-in, visibility 300ms ease-in;
-                margin-left: 0.5rem;
-            }
-            &:hover {
-                span {
-                    visibility: visible;
-                    transform: translateY(0);
-                    animation: slowshow 600ms linear 1; 
-                }
-            }
+        transition: transform 0.3s;
+        &:hover {
+            transform: scale(1.3);
         }
     }
+    background-color: $tertiary-color;
+    padding: 1rem;
+    svg {
+        margin-right: 0.5rem;
+    }
+    
 }
+// @media (max-width: 1300px) {
+//     @keyframes slowshow {
+//         0% {
+//             opacity: 0;
+//         }
+//         100% {
+//             opacity: 1;
+//         }
+//     }
+//     .nav {
+//         width: 100%;
+//         height: 70px;
+//         flex-direction: row;
+//         overflow-x: scroll;
+//         overflow-y: hidden;
+//         position:relative;
+//         align-items: center;
+//         padding: 1rem;
+//         gap: 5rem;
+//         margin: auto;
+//         a {
+//             display: flex;
+//             align-items: center;
+//             span {
+//                 visibility: hidden;
+//                 transform: translateY(-1rem);
+//                 transition: transform 300ms ease-in, visibility 300ms ease-in;
+//                 margin-left: 0.5rem;
+//             }
+//             &:hover {
+//                 span {
+//                     visibility: visible;
+//                     transform: translateY(0);
+//                     animation: slowshow 600ms linear 1; 
+//                 }
+//             }
+//         }
+//     }
+// }
 
-@media(max-width: 500px) {
-    .nav {
-        a {
-            span {
-                display: none;
-            }
-        }
-    }
-}
+// @media(max-width: 500px) {
+//     .nav {
+//         a {
+//             span {
+//                 display: none;
+//             }
+//         }
+//     }
+// }
