--- a/components/Neon/style.module.scss
+++ b/components/Neon/style.module.scss
@@ -5,9 +5,9 @@
     @keyframes flicker {
       0%, 18%, 22%, 25%, 53%, 57%, 100% {
         text-shadow:
-          0 0 4px #fff,
-          0 0 11px #fff,
-          0 0 19px #fff,
+          0 0 4px #000,
+          0 0 11px #000,
+          0 0 19px #000,
           0 0 40px rgb(128, 244, 163),
           0 0 80px rgb(128, 244, 163),
           0 0 90px rgb(128, 244, 163),
