--- a/styles/navbar.module.scss
+++ b/styles/navbar.module.scss
@@ -1,5 +1,14 @@
 @import "./variables.scss";
 
+@keyframes slatein {
+    0%{
+        transform: translateX(-100%);
+    }
+    100% {
+        transform: translateX(0);
+    }
+}
+
 .nav {
     position: sticky;
     top: 0;
@@ -15,16 +24,27 @@
         display: flex;
         align-items: center;
         transition: transform 0.3s;
+        color: $black-color;
         &:hover {
             transform: scale(1.3);
+            // &::after {
+            //     position: absolute;
+            //     bottom: 0;
+            //     left: 0;
+            //     content: '';
+            //     width: 100%;
+            //     height: 1px;
+            //     background-color: $tertiary-color;
+            //     animation: slatein 0.3s ease-in once;
+            // }
         }
     }
-    background-color: $tertiary-color;
+    border-bottom: 2px solid $black-color;
+    // background-color: $tertiary-color;
     padding: 1rem;
     svg {
         margin-right: 0.5rem;
-    }
-    
+    }   
 }
 // @media (max-width: 1300px) {
 //     @keyframes slowshow {
