--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -1,3 +1,9 @@
+@import "./variables.scss";
+
+.main {
+  padding-top: 20rem;
+  height: 300vh;
+}
 .card {
   width: 16rem;
   height: 20rem;
@@ -39,4 +45,22 @@
 
 .title {
   font-weight: 550;
+}
+
+.box {
+  width: 150px;
+  height: 150px;
+  border-radius: 1em;
+  background-color: #f9f07e;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.magic {
+  width: 200px;
+  height: 200px;
+  background-color: $secondary-color;
+  border-radius: 20px;
+  margin-left: auto;
+  margin-right: auto;
 }
