--- a/styles/navbar.module.scss
+++ b/styles/navbar.module.scss
@@ -1,50 +1,53 @@
 @import "./variables.scss";
 
 @keyframes slatein {
-    0%{
-        transform: translateX(-100%);
-    }
-    100% {
-        transform: translateX(0);
-    }
+  0% {
+    transform: translateX(-100%);
+  }
+  100% {
+    transform: translateX(0);
+  }
 }
 
 .nav {
-    position: sticky;
-    top: 0;
-    font-family: InkLipquid;
-    height: 1.5rem;
+  z-index: 99;
+  position: sticky;
+  top: -1px;
+  left: 0;
+  font-family: InkLipquid;
+  height: 1.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  gap: 4rem;
+  background-color: $white-color;
+  a {
+    font-size: 1rem;
+    line-height: 1.2rem;
     display: flex;
-    justify-content: center;
-    align-items: flex-end;
-    gap: 4rem;
-    a {
-        font-size: 1rem;
-        line-height: 1.2rem;
-        display: flex;
-        align-items: center;
-        transition: transform 0.3s;
-        color: $black-color;
-        &:hover {
-            transform: scale(1.3);
-            // &::after {
-            //     position: absolute;
-            //     bottom: 0;
-            //     left: 0;
-            //     content: '';
-            //     width: 100%;
-            //     height: 1px;
-            //     background-color: $tertiary-color;
-            //     animation: slatein 0.3s ease-in once;
-            // }
-        }
+    align-items: center;
+    transition: transform 0.2s;
+    color: $black-color;
+    &:hover {
+      transform: scale(1.2);
+      // &::after {
+      //     position: absolute;
+      //     bottom: 0;
+      //     left: 0;
+      //     content: '';
+      //     width: 100%;
+      //     height: 1px;
+      //     background-color: $tertiary-color;
+      //     animation: slatein 0.3s ease-in once;
+      // }
     }
-    border-bottom: 2px solid $black-color;
-    // background-color: $tertiary-color;
-    padding: 1rem;
-    svg {
-        margin-right: 0.5rem;
-    }   
+  }
+  border-bottom: 2px solid $black-color;
+  // background-color: $tertiary-color;
+  padding: 1rem;
+  svg {
+    margin-right: 0.5rem;
+  }
 }
 // @media (max-width: 1300px) {
 //     @keyframes slowshow {
@@ -79,7 +82,7 @@
 //                 span {
 //                     visibility: visible;
 //                     transform: translateY(0);
-//                     animation: slowshow 600ms linear 1; 
+//                     animation: slowshow 600ms linear 1;
 //                 }
 //             }
 //         }
