--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,4 +1,4 @@
-@import './variables.scss';
+@import "./variables.scss";
 // @font-face {
 //   font-family: 'Designer Block';
 //   font-weight: 200;
@@ -20,7 +20,7 @@
   src: url("/fonts/InkLipquidFonts.ttf") format("truetype");
 }
 
-  @font-face {
+@font-face {
   font-family: "NotoSans";
   font-weight: 200;
   src: url("/fonts/NotoSansKR-Regular.otf") format("truetype");
@@ -116,8 +116,11 @@ video {
 }
 
 html,
-body {
-  font-family: NotoSans, InkLipquid, sans-serif, Oxygen,BlinkMacSystemFont, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue;
+body,
+#__next {
+  font-family: NotoSans, InkLipquid, sans-serif, Oxygen, BlinkMacSystemFont,
+    -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Fira Sans, Droid Sans,
+    Helvetica Neue;
   line-height: 1.6;
   font-size: 18px;
   position: fixed;
@@ -129,11 +132,6 @@ body {
   box-sizing: border-box;
 }
 
-#__next {
-  width: 100%;
-  height: 100%;
-}
-
 a {
   text-decoration: none;
   outline: none;
@@ -142,10 +140,10 @@ a {
  a:hover,
 a:active {
   text-decoration: none;
-  color: $primary-color
- }
+  color: $primary-color;
+}
 
- a:visited {
+a:visited {
   text-decoration: none;
 }
 img {
