--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -4,4 +4,5 @@ $primary-color: #d9eff7;
 $secondary-color: #9bbbfc;
 $tertiary-color: #4741a6;
 $quaternary-color: #f9ce69;
-$black-color: #000
+$black-color: #000;
+$white-color: #fff;
